--- a/style.css
+++ b/style.css
@@ -18,8 +18,53 @@ body{
 #main{
     display: flex;
     flex: 1;
+    flex-direction: column;
     border: solid 4px green;
 
+}
+
+.expanded{
+    display: flex;
+    flex: 1;
+    min-height: 400px;
+}
+
+#sect1{
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    align-items: center;
+    justify-content: space-between;
+
+
+    border:solid 4px purple;
+}
+
+#lTxtSect1{
+    display: flex;
+    flex-direction: column;
+    flex: 0 1;
+    align-items: center;
+    align-self: stretch;
+    justify-content: center;
+
+    background-color: green;
+    font-size: 96px;
+}
+
+#clickShapeBox{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+
+#sect2{
+    
+    display: none;
+
+    border:solid 4px aqua;
 }
 
 
