dve sipky ktore sa musia striedat, trochu zabugovane

--- a/style.css
+++ b/style.css
@@ -119,7 +119,6 @@ p{
 
 #clickShapeBox{
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
 }
@@ -140,7 +139,6 @@ path{
 
    /* border:solid 4px aqua;*/
 }
-
 #sect2col1{
     display: flex;
     flex-direction: column;
@@ -163,11 +161,56 @@ path{
    /* border:solid 4px blue;*/
 }
 
-.showImg
+#sect3{
+    display: block;
+    flex-direction: column;
+    padding: 0 18px;
+    overflow: hidden;
+    max-height: 0;
+    transition: max-height 2s ease-out;
+
+   /* border:solid 4px aqua;*/
+}
+
+#sect3col1{
+    display: flex;
+    flex-direction: column;
+    background-color: black;
+    /*border:solid 4px green;*/
+}
+
+#sect3col2{
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    background-color: black;
+   /* border:solid 4px red;*/
+}
+
+#sect3col3{
+    display: flex;
+    flex-direction: column;
+    background-color: black;
+   /* border:solid 4px blue;*/
+}
+
+
+
+
+.showImgSct1
 {
     width: 800px;
     height: 350px;
     background-color: #00b300;
+   /* border:solid 4px lime; */ 
+}
+
+
+.showImgSct2
+{
+    width: 800px;
+    height: 350px;
+    background-color: blue;
    /* border:solid 4px lime; */ 
 }
 
