--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ body{
 
     margin: 32px;
     max-height: 90px;
+    min-height: 64px;    
 
     position: fixed;
     top: 0;
@@ -33,8 +34,8 @@ body{
     z-index: 100;   
 
 
-    margin: 32px;
-    max-height: 90px;
+
+
 }
 #lTxtNav{
     flex: 1;
@@ -120,7 +121,7 @@ body{
     color: #00b300;
 
     margin: 0;
-    font-size: 96px;
+    font-size: 6rem;
 }
 
 #dscTxtSect1{
@@ -133,7 +134,7 @@ body{
     color: #00b300;
 
     margin: 0;
-    font-size: 32px;
+    font-size: 2rem;
 }
 
 #dscTxt
@@ -150,12 +151,15 @@ p{
     display: flex;
     flex: 0 1;
     align-items: center;
+    gap: 6rem;
     justify-content: center;
+    margin-bottom: 2rem;
 }
 
 
 #arrow,#arrow2{
-    
+    max-width: 100px;
+    max-height: 110px;
 }
 
 path{
@@ -269,11 +273,12 @@ path{
 
 /*
 rozbija transition animaciu ked sa meni stav sipky
-path:hover{
-    stroke-width: 6px;
+*/
+/*path:hover{
+    transform: translateY(+10px);
 }*/
 
-@keyframes blink {
+/*@keyframes blink {
     0%{
         opacity: 1;
     }
@@ -286,23 +291,8 @@ path:hover{
     }
     
 }
-
+*/
 /* EXPERIMENTALNE*/
-
-/* ked je vw velka*/
-/*@media screen and (min-width: 601px)
-{
-    #lTxtSect1
-    {
-        font-size: 5rem;
-    }
-
-    #dscTxtSect1
-    {
-        font-size: 2.5rem;
-    }
-
-}*/
 
 /* ked je vw mala*/
 
@@ -341,9 +331,13 @@ path:hover{
     }
 
     .showImgSct2,.showImgSct3{
-        width:400px;
-        height: 175px;
+        width:250px;
+        height: 100px;
     } 
+
+    #clickShapeBox{
+        gap: 1rem
+    }
 
 }
 
